<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".FragmentSatu">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/btnHome"
        android:layout_width="46dp"
        android:layout_height="34dp"
        android:textSize="10dp"
        android:textColor="@color/white"
        android:background="@color/cardview_dark_background"
        android:text="@string/home" />
    <Button
        android:id="@+id/btnCekstock"
        android:layout_width="46dp"
        android:layout_height="34dp"
        android:layout_marginBottom="16dp"
        android:textSize="10dp"
        android:textColor="@color/white"
        android:background="@color/cardview_dark_background"
        android:text="@string/stock" />
    <Button
        android:id="@+id/btnAdd"
        android:layout_width="46dp"
        android:layout_height="34dp"
        android:layout_marginBottom="16dp"
        android:textSize="10dp"
        android:textColor="@color/white"
        android:background="@color/cardview_dark_background"
        android:text="@string/addd" />

</LinearLayout>