<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bggradient"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="33dp">

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/textInputLayout"
            android:layout_width="269dp"
            android:layout_height="59dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="12dp"
            android:hint="@string/email"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/emailRg"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:autofillHints=""
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/textInputLayout2"
            android:layout_width="269dp"
            android:layout_height="59dp"
            android:layout_marginEnd="80dp"
            android:hint="@string/pass"
            app:layout_constraintBottom_toTopOf="@+id/buttonSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.909">

            <EditText
                android:id="@+id/passwordRg"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:autofillHints=""
                android:hint="@string/pass"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="104dp"
            android:layout_height="36dp"
            android:layout_marginTop="532dp"
            android:layout_marginEnd="80dp"
            android:background="#22552A"
            android:backgroundTint="#22552A"
            android:text="@string/SignUp"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="99dp"
            android:layout_height="21dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="84dp"
            android:background="@drawable/bggradient"
            android:text="@string/Login"
            android:textColor="#97BF7A"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignUp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="286dp"
        android:layout_height="136dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/Logo"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_olahwht" />

</androidx.constraintlayout.widget.ConstraintLayout>